<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Copa Mundo</string>
    <string name="str_toolbar_account">Crear cuenta</string>

    <string name="str_menubn_results">Partidos</string>
    <string name="str_menubn_groups">Grupos</string>
    <string name="str_menubn_news">Noticias</string>
    <string name="str_menubn_stadium">Estadios</string>
    <string name="str_menubn_profile">Perfil</string>


    <string name="str_title_video">Recuerde los mejores goles del mundial</string>


    <string name="str_news_uno">¡A 55 DÍAS DE RUSIA 2018!</string>
    <string name="str_news_uno_text">Reserve su asiento en la Copa Mundial de la FIFA 2018™ y disfrute del fútbol a otro nivel gracias a nuestro Programa Oficial de Hospitalidad.</string>
    <string name="str_news_dos">MÉXICO: ASPIRÁ AL 5TO PARTIDO</string>
    <string name="str_news_dos_text">Ya son seis ediciones consecutivas que la selección mexicana ha logrado superar la fase de grupos, pero ese es su techo.</string>
    <string name="str_news_tres">LA GIRA DE LA COPA DEL MUNDO</string>
    <string name="str_news_tres_text">La gira del trofeo de la copa del mundo hace escala en America Latina, convocando a millones de aficionados del futbol.</string>


    <string name="str_stadium_uno">Estadio Kaliningrado</string>
    <string name="str_stadium_dos">Estadio Volgogrado Arena</string>
    <string name="str_stadium_tres">Estadio Ekaterimburgo Arena</string>
    <string name="str_stadium_cuatro">Estadio Fisht</string>
    <string name="str_stadium_cinco">Estadio Kazán Arena</string>
    <string name="str_stadium_seis">Estadio De Nizhni Nóvgorod</string>
    <string name="str_stadium_siete">Estadio Luzhniki</string>
    <string name="str_stadium_ocho">Estadio Samara Arena</string>
    <string name="str_stadium_nueve">Estadio Rostov Arena</string>
    <string name="str_stadium_diez">Estadio Del Spartak</string>
    <string name="str_stadium_once">Estadio De San Petersburgo</string>
    <string name="str_stadium_doce">Estadio De Mordovia Arena</string>


    <string name="str_profile_option_uno">Notificaciones</string>
    <string name="str_profile_option_dos">Enviar email</string>
    <string name="str_profile_option_tres">Ejecutar sonidos</string>


    <string name="str_group_a">GRUPO A</string>
    <string name="str_group_b">GRUPO B</string>
    <string name="str_group_c">GRUPO C</string>
    <string name="str_group_d">GRUPO D</string>
    <string name="str_group_e">GRUPO E</string>
    <string name="str_group_f">GRUPO F</string>
    <string name="str_group_g">GRUPO G</string>
    <string name="str_group_h">GRUPO H</string>


    <string name="str_login_name">Nombre de usuario</string>
    <string name="str_login_password">Contraseña</string>
    <string name="str_btn_login">Ingresar</string>


    <string name="str_account_email">Correo electronico</string>
    <string name="str_account_name">Nombre</string>
    <string name="str_account_user">Usuario</string>
    <string name="str_account_password">Contraseña</string>
    <string name="str_account_repassword">Confirmar contraseña</string>
    <string name="str_btn_account">Crear cuenta</string>


    <string name="str_stadium_history">Historia</string>
    <string name="str_stadium_desing">Diseño</string>


    <string name="str_stadium_uno_historytext">Las obras del estadio de Saransk para Rusia 2018 empezaron en 2010, en el 1000º aniversario de la unificación de los pueblos mordovos con los demás grupos étnicos de Rusia. El recinto se levanta en el centro de la ciudad, a orillas del río Insar.</string>
    <string name="str_stadium_uno_desingtext">El diseño del estadio tiene forma oval. Su fuerte colorido, que combina el naranja, el rojo y el blanco, rinde tributo a la distintiva paleta cromática de la artesanía de Mordovia.</string>
</resources>
